// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Getting chart data should create series from single measure 1`] = `
Object {
  "categories": Array [
    undefined,
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "drillContext": Array [
            Object {
              "header": Object {
                "id": "a8908b3c92b6743b1fc71c8b113533bc",
                "uri": null,
              },
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 118,
        },
      ],
      "isDrillable": false,
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;

exports[`Getting chart data should create series from single measure and attribute 1`] = `
Object {
  "categories": Array [
    "",
    "Churned",
    "N/A",
    "OK",
    "Potentially Churned / Salesforce Issues",
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "drillContext": Array [
            Object {
              "header": Object {
                "id": "label.projectgroup.stage",
                "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              },
              "id": "1",
              "value": "",
            },
            Object {
              "header": Object {
                "id": "a8908b3c92b6743b1fc71c8b113533bc",
                "uri": null,
              },
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "drillContext": Array [
            Object {
              "header": Object {
                "id": "label.projectgroup.stage",
                "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              },
              "id": "321199",
              "value": "Churned",
            },
            Object {
              "header": Object {
                "id": "a8908b3c92b6743b1fc71c8b113533bc",
                "uri": null,
              },
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 25,
        },
        Object {
          "drillContext": Array [
            Object {
              "header": Object {
                "id": "label.projectgroup.stage",
                "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              },
              "id": "2288",
              "value": "N/A",
            },
            Object {
              "header": Object {
                "id": "a8908b3c92b6743b1fc71c8b113533bc",
                "uri": null,
              },
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "drillContext": Array [
            Object {
              "header": Object {
                "id": "label.projectgroup.stage",
                "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              },
              "id": "321198",
              "value": "OK",
            },
            Object {
              "header": Object {
                "id": "a8908b3c92b6743b1fc71c8b113533bc",
                "uri": null,
              },
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 153,
        },
        Object {
          "drillContext": Array [
            Object {
              "header": Object {
                "id": "label.projectgroup.stage",
                "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              },
              "id": "321216",
              "value": "Potentially Churned / Salesforce Issues",
            },
            Object {
              "header": Object {
                "id": "a8908b3c92b6743b1fc71c8b113533bc",
                "uri": null,
              },
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 27,
        },
      ],
      "isDrillable": false,
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;
